<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efef"
    tools:context=".MainActivity"
    >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="20dp"
            >
            <TextView
                android:text="bmi calculator"
                android:textAllCaps="true"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:fontFamily="monospace"
                android:layout_marginBottom="35dp"
                />
            <TextView
                android:text="Full Name"
                android:layout_columnWeight="1"
                />
            <EditText
                android:id="@+id/name_inp"
                android:hint="Vishnu Kumar"
                android:layout_columnWeight="3"
                android:maxWidth="30sp"
                android:inputType="text"
                />
            <TextView
                android:text="Weight(Kg)"
                android:layout_columnWeight="1"
                />
            <EditText
                android:id="@+id/weight_inp"
                android:hint="65"
                android:layout_columnWeight="3"
                android:maxWidth="5sp"
                android:maxLength="5"
                android:inputType="numberDecimal"
                />
            <TextView
                android:text="Height(ft)"
                android:layout_columnWeight="1"
                />
            <EditText
                android:id="@+id/height_inp"
                android:hint="5.5"
                android:layout_columnWeight="3"
                android:maxWidth="5sp"
                android:maxLength="5"
                android:inputType="numberDecimal"
                android:layout_marginBottom="25dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculate_btn"
                android:layout_columnSpan="2"
                android:text="Calculate"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/button_drawable"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_rowWeight="1"
                android:orientation="vertical"
                android:layout_marginBottom="25dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bmi_logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/bmi_fact"
                    android:layout_marginBottom="25dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_heading"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_1"
                    android:layout_marginBottom="2dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_2"
                    android:layout_marginBottom="2dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_3"
                    android:layout_marginBottom="2dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_myth_5"
                    android:layout_marginBottom="2dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="@string/copyright_text"
                android:fontFamily="monospace"
                android:textStyle="bold"
                />
        </GridLayout>


</ScrollView>